<resources>
	<string name="app_name">FootspotRetrofit</string>

	<string name="email">email</string>
	<string name="password">password</string>
	<string name="login">login</string>
	<string name="action_settings">Settings</string>
	<string name="title_activity_user">UserActivity</string>
	<string name="friends">Followers</string>
	<string name="logout">Log out</string>
	<string name="username">Username</string>
	<string name="title_activity_friends">FriendsActivity</string>
	<string name="login_failed">Login failed!</string>
	<string name="request_failed">Request failed!</string>
</resources>
