<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:paddingBottom="@dimen/activity_vertical_margin"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingTop="@dimen/activity_vertical_margin"
				tools:context=".MainActivity">

	<Button
		android:id="@+id/next_button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentStart="true"
		android:layout_alignParentLeft="true"
		android:layout_marginBottom="30dp"
		android:layout_marginLeft="30dp"
		android:layout_marginRight="30dp"
		android:onClick="onLoginClick"
		android:text="@string/login"/>

	<EditText
		android:id="@+id/password_edit_text"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:layout_above="@+id/next_button"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_marginBottom="15dp"
		android:layout_marginLeft="30dp"
		android:layout_marginRight="30dp"
		android:ems="10"
		android:hint="@string/password"
		android:inputType="textPassword"
		android:padding="15dp"
		android:singleLine="true"
		android:textSize="13sp"/>

	<EditText
		android:id="@+id/email_edit_text"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:layout_above="@+id/password_edit_text"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_marginBottom="15dp"
		android:layout_marginLeft="30dp"
		android:layout_marginRight="30dp"
		android:ems="10"
		android:hint="@string/email"
		android:inputType="textEmailAddress"
		android:padding="15dp"
		android:singleLine="true"
		android:textSize="13sp"/>
</RelativeLayout>
