<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingTop="@dimen/activity_vertical_margin"
				android:paddingBottom="@dimen/activity_vertical_margin"
				tools:context="com.example.footspotretrofit.ui.UserActivity">

	<ImageView
		android:id="@+id/avatar_view"
		android:layout_centerHorizontal="true"
		android:layout_width="@dimen/avatar_diameter"
		android:layout_height="@dimen/avatar_diameter"
		android:layout_marginTop="60dp"
		android:background="@android:drawable/ic_menu_camera" />

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/avatar_view"
		android:layout_centerHorizontal="true"
		android:orientation="vertical" >

		<TextView
			android:id="@+id/username_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:text="@string/username"
			android:textStyle="bold"
			tools:text="Username"/>

		<TextView
			android:id="@+id/address_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:visibility="visible"
			tools:text="Address"/>

	</LinearLayout>

	<Button
		android:id="@+id/logout_button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentStart="true"
		android:layout_alignParentLeft="true"
		android:layout_marginBottom="30dp"
		android:layout_marginLeft="30dp"
		android:layout_marginRight="30dp"
		android:text="@string/logout"
		android:onClick="onLogOutClick"/>

	<Button
		android:id="@+id/next_button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_above="@id/logout_button"
		android:layout_alignParentStart="true"
		android:layout_alignParentLeft="true"
		android:layout_marginBottom="10dp"
		android:layout_marginLeft="30dp"
		android:layout_marginRight="30dp"
		android:text="@string/friends"
		android:onClick="onFriendsClick"/>



</RelativeLayout>
